# forge_shell

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  README.md  forge_host.spec  forge_relay.spec  forge_shell.spec  pyproject.toml  sym_shell.spec
.context/: 63c95e23-ports-domain.md  7a2f4b91-machine-code.md  a48d6de1-decompose-terminal-session.md  f3899c34-3layer-relay.md  f3899c34-c45a-444c-8cf1-d5526f3eab6c.md  index.json
.context/archive/: 03167676-di-factory-logging.md  f3899c34-c45a-444c-8cf1-d5526f3eab6c.md
.gitea/workflows/: ci.yml
docs/: README.md  fast-track-flow.md
env/: requirements-dev.txt  requirements.txt
process/fast_track/: FAST_TRACK_PROCESS.md  FAST_TRACK_PROCESS.yml  SUMMARY_FOR_AGENTS.md
project/docs/: PRD.md  SPEC.md  TASK_LIST.md  TASK_LIST_cycle02.md  TASK_LIST_cycle03.md  TASK_LIST_cycle04.md  TASK_LIST_cycle06.md  hyper_questionnaire.md  retro-cycle-01.md  retro-cycle-02.md  retro-cycle-03.md  retro-cycle-04.md  retro-cycle-06.md
scripts/: build.sh
tests/e2e/: conftest.py  test_keyboard_e2e.py  tmux_harness.py
tests/integration/: test_c3t01_t03_relay_websocket.py  test_c3t04_terminal_session_io.py  test_chat_relay.py  test_chat_terminal.py  test_t05_t13_pty_engine.py
tests/manual/: test_sonda_e2e.py
tests/smoke/: test_pty_smoke.py
tests/unit/: test_agent_config.py  test_agent_memory.py  test_agent_service.py  test_agent_suggest_display.py  test_agent_tools_filesystem.py  test_agent_tools_shell.py  test_agent_tools_web.py  test_attach_chat.py  test_bidirectional_input.py  test_build_artifacts.py  test_c2t01_t02_packaging.py  test_c2t03_t09_terminal_session.py  test_c2t04_t07_cli_wiring.py  test_c2t05_t06_nl_interceptor.py  test_c2t08_share_wired.py  test_c3t05_install_smoke.py  test_c3t06_nl_smoke_attach.py  test_c4t01_relay_config.py  test_c4t02_attach_live.py  test_c4t03_audit_wired.py  test_c4t04_relay_bridge.py  test_c4t05_share_wired.py  test_c5t01_intercept_result_handling.py  test_c5t02_startup_config.py  test_c6t01_main_wiring.py  test_c6t02_double_confirm.py  test_c6t03_toggle_indicator.py  test_c6t04_share_relay.py  test_c6t05_config_example.py  (+29 more)
(+83 files in other folders)
