[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sym-shell"
version = "0.1.0"
description = "Terminal Bash nativo com NL Mode, colaboração remota e auditoria"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "websockets>=14.0",
    "forge-llm>=0.7",
]

[project.scripts]
sym_shell = "src.adapters.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
