[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-shell"
version = "0.5.2"
description = "Terminal Bash nativo com NL Mode, colaboração remota e auditoria"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "websockets>=14.0",
    "forge-llm>=0.7.4",
    "pyte>=0.8",
    "httpx>=0.27",
    "readability-lxml>=0.8",
]

[project.scripts]
forge_shell = "src.adapters.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = ["pexpect>=4.9"]
standalone = ["pyinstaller>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: smoke tests PTY interativo (requer pexpect e terminal real)",
]
